--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,41 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <!--
+                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        <addClasspath>true</addClasspath>
+                        -->
+                        <mainClass>org.humsat.demo.gssw.sensorlocator.SensorLocator</mainClass>
+                    </manifest>
+                    <!-- -->
+                    <manifestEntries>
+                        <Class-Path>./dependency/</Class-Path>
+                    </manifestEntries>
+                    <!-- -->
+                </archive>
+            </configuration>
+        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+    </build>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -32,4 +67,5 @@
       <version>2.0.5</version>
     </dependency>
   </dependencies>
+  
 </project>
